fix: scrollbar fix when page size changes (#207)

--- a/src/react/components/common/tagInput/tagInput.scss
+++ b/src/react/components/common/tagInput/tagInput.scss
@@ -35,7 +35,6 @@
             position: relative;
 
             &-container {
-                height: 404px;
                 overflow-x: visible;
                 overflow-y: auto;
             };
